# rhoai3-demo

./: .gitignore  AGENTS.md  BACKLOG.md  PLAN.md  README.md  env.example
.agents/hooks/: README.md  guard-openshift-command.py
.claude/: CLAUDE.md
.codex/: hooks.json
.cursor/: hooks.json
artifacts/: rag-ingestion-batch.yaml
backup/legacy-implementation-2026-06-09/steps/step-07-rag/chatbot/: Containerfile  pyproject.toml
backup/legacy-implementation-2026-06-09/steps/step-07-rag/chatbot/llama_stack_ui/distribution/ui/modules/: llama_stack_compat.py  utils.py
docs/: AI_COLLABORATION.md  BACKLOG.md  OPERATIONS.md  PLATFORM_BASELINE.md  README.md  TROUBLESHOOTING.md  alignment-evidence-ledger.md  face-recognition-mlops-session.md  next-session-plan.md  resolved-issues.md  rhoai-3.4-alignment-audit.md  trustyai-metrics-proxy-prompt.md
gitops/: README.md
scripts/: README.md  align-operator-subscriptions.sh  audit-doc-alignment.sh  bootstrap.sh  generate-readme-visuals.py  lib.sh  rag-ingest.py  validate-agent-guidance.rb  validate-chatbot-ui.sh  validate-demo-flow.sh  validate-genai-playground-readiness.sh  validate-lib.sh
stage-110-rhoai-base-platform/: PLAN.md  README.md  deploy.sh  setup-access.sh  validate.sh
stage-120-gpu-as-a-service/: PLAN.md  README.md  deploy.sh  generate-gpu-machineset.sh  validate.sh
stage-210-model-serving-foundation/: PLAN.md  README.md  benchmark-guidellm.sh  deploy.sh  prepare-policy-benchmark-data.sh  validate.sh
stage-220-models-as-a-service/: PLAN.md  README.md  configure-genai-playground.sh  deploy.sh  validate.sh
stage-230-models-as-a-service/: PLAN.md  README.md  deploy.sh  validate.sh
stage-230-private-data-rag/: PLAN.md  README.md  deploy.sh  run-autorag-pipeline.sh  run-docling-pipeline.sh  run-mlflow-evaluation.sh  run-rhoai-docs-pipeline.sh  run-whoami-ingestion-pipeline.sh  validate.sh
stage-230-private-data-rag/chatbot/: Containerfile  pyproject.toml
stage-230-private-data-rag/chatbot/llama_stack_ui/distribution/ui/modules/: api.py  guardrails.py  local_extractors.py  tracing.py  utils.py
stage-230-private-data-rag/chatbot/llama_stack_ui/distribution/ui/page/playground/: agent.py  chat.py  direct.py
stage-230-private-data-rag/chatbot/llama_stack_ui/distribution/ui/page/upload/: upload.py
stage-230-private-data-rag/chatbot/rhoai_rag_chatbot/: __init__.py  app.py  config.py  guardrails.py  llama_stack_gateway.py  mcp.py  prompts.py
stage-240-guardrails-and-safety/: PLAN.md  README.md  deploy.sh  validate.sh
stage-250-model-evaluation/: PLAN.md  README.md  deploy.sh  submit-risk-assessment.sh  validate.sh
steps/: README.md
(+1543 files in other folders)
