[project]
name = "rhoai-rag-chatbot"
version = "0.1.0"
description = "Stage 230 private RAG chatbot for the RHOAI 3 demo"
authors = [
    { name = "rhoai3-demo" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "llama-stack-client==0.7.2",
    "requests",
]

[tool.setuptools.packages.find]
include = ["rhoai_rag_chatbot*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
