[project]
name = "llama_stack_ui"
version = "6"
description = "Local LLM stack with UI for RAG-based applications"
authors = [
    { name = "Saurabh Agarwal", email = "sauagarw@redhat.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "llama-stack-client==0.7.2",
    "requests",
    "streamlit-option-menu",
    "llama-stack==0.7.2",
    # MLflow tracing of chat turns against the RHOAI 3.4 product MLflow;
    # the kubernetes extra provides the kubernetes-namespaced auth plugin
    # (SDK >=3.11 required per the Working with MLflow guide).
    "mlflow[kubernetes]>=3.11",
    "fire",
    "asyncpg",
    "python-docx",
    "openpyxl",
]

[tool.setuptools]
packages = ["llama_stack_ui"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
